# rust-rest-api

./: .env.example  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  diesel.toml  docker-compose.yml
migrations/00000000000000_diesel_initial_setup/: up.sql
migrations/2023-05-16-123954_user/: up.sql
migrations/2023-05-16-131516_todo/: up.sql
src/: common.rs  config.rs  container.rs  create_app.rs  lib.rs  main.rs
src/api/: mod.rs
src/api/controllers/: authentication_handler.rs  mod.rs  user_handler.rs
src/api/dto/: user.rs
src/api/dto/authentication/: login.rs  register.rs
src/api/v1/todo/: mod.rs  todo_handler.rs
src/core/: app.rs  config.rs  mod.rs  schema.rs
src/core/db/: postgresql.rs
src/core/models/: mod.rs  service_context.rs  todo.rs  user.rs
src/core/repositories/: todo.rs  user.rs
src/core/services/: service_context.rs
src/domain/models/: authentication.rs  mod.rs  todo.rs  user.rs
src/domain/repositories/: mod.rs  repository.rs  user.rs
src/domain/services/: authentication.rs  user.rs
src/infrastructure/services/: service_context.rs
src/services/: authentication.rs  mod.rs  user.rs
src/tests/api/: test_todo_controllers.rs
src/utils/: argon2.rs  jwt.rs  mod.rs
src/v1/: mod.rs  router.rs
src/v1/todo/: controller.rs  mod.rs  router.rs
