[package]
name = "rust-rest-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3"
actix-threadpool = "0.3.3"
anyhow = "1.0.71"
argon2 = "0.5.0"
chrono = { version = "0.4.22", features = ["serde"] }
diesel_migrations = "2.0.0"
diesel = { version = "2.0.0", features = ["postgres", "r2d2", "chrono", "serde_json", "uuid"] }
diesel-async = { version = "0.2.1", features = ["postgres", "deadpool"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
jsonwebtoken = "8.3.0"
rand_core = { version = "0.6.4", features = ["std"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.96"
sqlx = { version = "0.6.3", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
uuid = { version = "1.3.2", features = ["serde", "v4"] }
async-trait = "0.1.58"
testcontainers = { version = "0.14.0" }
log = "0.4"
futures-util = "0.3.26"
